# Crzgames_RC2DCore_refacto

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  dependencies.txt  docker-compose.yml
.github/workflows/: build_deploy_production.yml  build_deploy_staging.yml
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/com/crzgames/rc2d/: MyGame.java
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
android-project/gradle/wrapper/: gradle-wrapper.properties
arevoir/: RC2D_graphics.c  RC2D_joystick.c  RC2D_messagebox.c  RC2D_mouse.c  RC2D_rres.c  RC2D_rres.h  RC2D_thread.c  RC2D_touch.c
arevoir/rres/: rres.h
arevoir/spine/: Animation.h  AnimationState.h  Attachment.h  AttachmentLoader.h  Bone.h  MeshAttachment.h  PathConstraintData.h  SkeletonBinary.h  SkeletonBounds.h  SkeletonJson.h  Skin.h  Slot.h  TransformConstraint.h  TransformConstraintData.h  spine.h
arevoir/spine-c/: extension.c
build-scripts/: windows-arm64.sh  windows-x64.sh
build-scripts/generate-lib/: android.sh  linux.sh  macos.sh  windows-arm64.sh  windows-x64.sh  windows.sh
cmake/: download_shadercross.cmake  setup_dependencies.cmake
docs/: package-lock.json  package.json
docs/src/guides/: assets.md  distribution.md  icons.md  testing.md
docs/src/guides/development/: development-cycle.md  rc-ecosystem.md
docs/src/guides/getting-started/: prerequisites.md  quick-start.md
examples/: main.c
examples/assets/shaders/compiled/msl/: test.vertex.msl
examples/assets/shaders/scripts/: compile_shaders.bat
examples/scripts/: compile_shaders.bat  compile_shaders.sh
examples/shaders/compiled/dxil/: test.compute.dxil  test.fragment.dxil  test.vertex.dxil
examples/shaders/compiled/msl/: test.compute.msl  test.fragment.msl  test.vertex.msl
examples/shaders/compiled/pssl/: test.compute.hlsl
examples/shaders/compiled/spirv/: test.compute.spv  test.fragment.spv  test.vertex.spv
examples/shaders/reflection/: test.compute.json
examples/shaders/scripts/: arevoir.sh  compile_shaders.bat  compile_shaders.sh
examples/shaders/src/: rectangle.fragment.hlsl  rectangle.vertex.hlsl  test.compute.hlsl  test.fragment.hlsl  test.vertex.hlsl
examples/shaders/tools/metal-shaderconverter/: README.md
examples/src/: game.c  main.c
include/RC2D/: RC2D.h  RC2D_camera.h  RC2D_collision.h  RC2D_config.h  RC2D_data.h  RC2D_engine.h  RC2D_gpu.h  RC2D_imgui.h  RC2D_internal.h  RC2D_local.h  RC2D_memory.h  RC2D_onnx.h  RC2D_rres.h  RC2D_touch.h  RC2D_window.h  rc2d_collision.h  rc2d_mouse.h  rc2d_touch.h
include/rc2d/: RC2D.h  RC2D_assert.h  RC2D_asyncio.h  RC2D_config.h  RC2D_engine.h  RC2D_filedialog.h  RC2D_gpu.h  RC2D_internal.h  RC2D_iostream.h  RC2D_keycode.h  RC2D_messagebox.h  RC2D_net.h  RC2D_onnx.h  RC2D_pixels.h  RC2D_power.h  RC2D_scancode.h  RC2D_storage.h  RC2D_time.h  RC2D_tray.h  RC2D_version.h  rc2d_audio.h  rc2d_collision.h  rc2d_data.h  rc2d_event.h  rc2d_filesystem.h  rc2d_graphics.h  rc2d_joystick.h  rc2d_keyboard.h  rc2d_keycode_and_scancode.h  rc2d_logger.h  rc2d_math.h  rc2d_mouse.h  rc2d_net.h  rc2d_rres.h  rc2d_spine.h  rc2d_system.h  rc2d_thread.h  rc2d_timer.h  rc2d_touch.h  rc2d_tweening.h  (+1 more)
src/: rc2d.c  rc2d_audio.c  rc2d_collision.c  rc2d_data.c  rc2d_event.c  rc2d_filesystem.c  rc2d_graphics.c  rc2d_joystick.c  rc2d_keyboard.c  rc2d_logger.c  rc2d_math.c  rc2d_mouse.c  rc2d_rres.c  rc2d_spine.c  rc2d_system.c  rc2d_thread.c  rc2d_timer.c  rc2d_touch.c  rc2d_tweening.c  rc2d_window.c
src/RC2D/: RC2D_assert.c  RC2D_camera.c  RC2D_collision.c  RC2D_data.c  RC2D_engine.c  RC2D_entrypoint.c  RC2D_event.c  RC2D_filedialog.c  RC2D_filesystem.c  RC2D_gpu.c  RC2D_graphics.c  RC2D_guid.c  RC2D_imgui.c  RC2D_joystick.c  RC2D_keyboard.c  RC2D_letterbox.c  RC2D_local.c  RC2D_logger.c  RC2D_math.c  RC2D_memory.c  RC2D_messagebox.c  RC2D_mouse.c  RC2D_onnx.c  RC2D_rres.c  RC2D_spine.c  RC2D_system.c  RC2D_thread.c  RC2D_time.c  RC2D_timer.c  RC2D_touch.c  RC2D_tweening.c  RC2D_window.c
tests/rc2d/: rc2d_collision.c
